Conexiones gráficas
Crea líneas para representar conexiones entre compuertas. Genera un error luego de crear una linea. No deja presionar otros botones.